[tool.poetry]
name = "meal-plan-bot"
version = "0.1.0"
description = ""
authors = ["Yan <100032599+whykay-01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyTelegramBotAPI = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
